<resources>
    <string name="app_name">NoobManageFinances</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="edit_login_user_name">请输入用户名</string>
    <string name="edit_login_user_pwd">请输入密码</string>
    <string name="text_forget_pwd">忘记密码</string>
    <string name="text_register">注册</string>
    <string name="text_login">登录</string>


</resources>